
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.openshift.origin.pkg.application.api.v1;

import "k8s.io/kubernetes/pkg/api/unversioned/generated.proto";
import "k8s.io/kubernetes/pkg/api/v1/generated.proto";
import "k8s.io/kubernetes/pkg/runtime/generated.proto";
import "k8s.io/kubernetes/pkg/util/intstr/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1";

// Application describe an Application
message Application {
  // Standard object's metadata.
  optional k8s.io.kubernetes.pkg.api.v1.ObjectMeta metadata = 1;

  // Spec defines the behavior of the Namespace.
  optional ApplicationSpec spec = 2;

  // Status describes the current status of a Namespace
  optional ApplicationStatus status = 3;
}

// ApplicationList describe an ApplicationList
message ApplicationList {
  // Standard object's metadata.
  optional k8s.io.kubernetes.pkg.api.unversioned.ListMeta metadata = 1;

  // Items is a list of applications
  repeated Application items = 2;
}

// ApplicationSpec describes the attributes on a Application
message ApplicationSpec {
  // name defines the name of a Application
  optional string name = 1;

  // items defines the resources to be labeled in a Application
  repeated Item items = 2;

  // destory defines the resources to be removed in a Application
  optional bool destoryOption = 3;

  // Finalizers is an opaque list of values that must be empty to permanently remove object from storage
  repeated string finalizers = 4;
}

// ApplicationStatus is information about the current status of a Application
message ApplicationStatus {
  // phase is the current lifecycle phase of the Application
  optional string phase = 1;
}

// Item  describe an application item
message Item {
  // kind defines the item kind of a item in Application
  optional string kind = 1;

  // name defines the item name of a item in Application
  optional string name = 2;

  // status defines a operate to the item label
  optional string status = 3;
}

