
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.openshift.origin.pkg.backingserviceinstance.api.v1;

import "k8s.io/kubernetes/pkg/api/unversioned/generated.proto";
import "k8s.io/kubernetes/pkg/api/v1/generated.proto";
import "k8s.io/kubernetes/pkg/util/intstr/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1";

// BackingServiceInstance describe a BackingServiceInstance
message BackingServiceInstance {
  // Standard object's metadata.
  optional k8s.io.kubernetes.pkg.api.v1.ObjectMeta metadata = 1;

  // Spec defines the behavior of the Namespace.
  optional BackingServiceInstanceSpec spec = 2;

  // Status describes the current status of a Namespace
  optional BackingServiceInstanceStatus status = 3;
}

// BackingServiceInstanceList describe a list of BackingServiceInstance
message BackingServiceInstanceList {
  // Standard object's metadata.
  optional k8s.io.kubernetes.pkg.api.unversioned.ListMeta metadata = 1;

  // Items is a list of routes
  repeated BackingServiceInstance items = 2;
}

// BackingServiceInstanceSpec describes the attributes on a BackingServiceInstance
message BackingServiceInstanceSpec {
  // description of an instance.
  optional InstanceProvisioning provisioning = 1;

  // description of an user-provided-service
  optional UserProvidedService userprovidedservice = 2;

  // bindings of an instance
  repeated InstanceBinding binding = 3;

  // binding number of an instance
  optional int64 bound = 4;

  // id of an instance
  optional string instance_id = 5;

  // tags of an instance
  repeated string tags = 6;
}

// BackingServiceInstanceStatus describe the status of a BackingServiceInstance
message BackingServiceInstanceStatus {
  // phase is the current lifecycle phase of the instance
  optional string phase = 1;

  // action is the action of the instance
  optional string action = 2;

  // last operation  of a instance provisioning
  optional LastOperation last_operation = 3;
}

// BindingRequestOptions describe a BindingRequestOptions.
message BindingRequestOptions {
  // Standard object's metadata.
  optional k8s.io.kubernetes.pkg.api.v1.ObjectMeta metadata = 1;

  // bind kind is bindking of an instance binding
  optional string bindKind = 2;

  // bindResourceVersion is bindResourceVersion of an instance binding.
  optional string bindResourceVersion = 3;

  // resourceName of an instance binding
  optional string resourceName = 4;
}

// InstanceBinding describe an instance binding.
message InstanceBinding {
  // bound time of an instance binding
  optional k8s.io.kubernetes.pkg.api.unversioned.Time bound_time = 1;

  // bind uid of an instance binding
  optional string bind_uuid = 2;

  // deploymentconfig of an binding.
  optional string bind_deploymentconfig = 3;

  // credentials of an instance binding
  map<string, string> credentials = 4;
}

// InstanceProvisioning describe an InstanceProvisioning detail
message InstanceProvisioning {
  // dashboard url of an instance
  optional string dashboard_url = 1;

  // bs name of an instance
  optional string backingservice_name = 2;

  // bs id of an instance
  optional string backingservice_spec_id = 3;

  // bs plan id of an instance
  optional string backingservice_plan_guid = 4;

  // bs plan name of an instance
  optional string backingservice_plan_name = 5;

  // parameters of an instance
  map<string, string> parameters = 6;
}

// LastOperation describe last operation of an instance provisioning
message LastOperation {
  // state of last operation
  optional string state = 1;

  // description of last operation
  optional string description = 2;

  // async_poll_interval_seconds of a last operation
  optional int64 async_poll_interval_seconds = 3;
}

// UserProvidedService describe an user-provided-service
message UserProvidedService {
  map<string, string> credentials = 1;
}

